--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
 
     <div class="two" id="portfolio">
       <div class="overlay2">
-        <h2>prosjekt 1</h2>
+        <h2>Portraits</h2>
         <hr>
-        <p>2001</p>
+        <p>June 2018</p>
+        <a href="portraits.html" class="button" >see more</a>
       </div>
     </div>
 
@@ -96,8 +97,7 @@
     <div class="thirteen"><h4>Copyright © 2018 All Rights Reserved.</h4></div>
 
 	</div>
-  </div>
-  
+</div>
   <script>
      $(document).ready(function(){
       $("a").on('click', function(event) {
