--- a/portraits.html
+++ b/portraits.html
@@ -1,6 +1,6 @@
 
 <head>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/style_portraits.css">
   <link rel="stylesheet" href="assets/fontawesome/css/all.css">
 </head>
 
@@ -10,9 +10,17 @@
   <h1>Portraits</h1>
 </div>
 
-<div class="portraits_img">
+<div class="portrait1_img">
+  <div class="testt">
   <img src="assets/img/tibias.jpg" alt="Tobias Barsnes">
-  <img src="assets/img/tibias2.jpg" alt="Tobias Barsnes">
-
+  <p>Tobias in Aarhus Art Museum</p>
+  </div> 
 </div>
+
+<div class="portrait2_img">
+  <img src="assets/img/tibias2.jpg" alt="Tobias Barsnes">
+</div>
+
+
+
 </body>
