--- a/portraits.html
+++ b/portraits.html
@@ -11,10 +11,9 @@
 </div>
 
 <div class="portrait1_img">
-  <div class="testt">
   <img src="assets/img/tibias.jpg" alt="Tobias Barsnes">
-  <p>Tobias in Aarhus Art Museum</p>
-  </div> 
+  <p>Aarhus Art Museum</p>
+  </div>
 </div>
 
 <div class="portrait2_img">
