--- a/index.html
+++ b/index.html
@@ -24,16 +24,17 @@
       <div class="overlay2">
         <h2>Portraits</h2>
         <hr>
-        <p>June 2018</p>
+        <p>Aarhus, June 2018</p>
         <a href="portraits.html" class="button" >see more</a>
       </div>
     </div>
 
     <div class="three">
       <div class="overlay3">
-        <h2>prosjekt 2</h2>
+        <h2>Documentary</h2>
         <hr>
-        <p>2002</p>
+        <p>Flekke, December 2017</p>
+        <a href="documentary.html" class="button">see more</a>
       </div>
     </div>
 
@@ -41,7 +42,7 @@
       <div class="overlay4">
         <h2>prosjekt 3</h2>
         <hr>
-        <p>2003<p>
+        <p>coming soon!<p>
       </div>
     </div>
 
@@ -49,7 +50,7 @@
       <div class="overlay5">
         <h2>prosjekt 4</h2>
         <hr>
-        <p>2004<p>
+        <p>coming soon!<p>
       </div>
     </div>
 
@@ -57,7 +58,7 @@
       <div class="overlay6">
         <h2>prosjekt 5</h2>
         <hr>
-        <p>2005<p>
+        <p>coming soon!<p>
       </div>
     </div>
 
@@ -65,7 +66,7 @@
       <div class="overlay7">
         <h2>prosjekt 6</h2>
         <hr>
-        <p>2006<p>
+        <p>coming soon!<p>
       </div>
     </div>
 
@@ -93,7 +94,7 @@
     <div class="thirteen"><h4>Copyright © 2018 All Rights Reserved.</h4></div>
 
 	</div>
-</div>
+
   <script>
      $(document).ready(function(){
       $("a").on('click', function(event) {
