--- a/portraits.html
+++ b/portraits.html
@@ -21,6 +21,19 @@
   <p>Aarhus Art Museum</p>
 </div>
 
+<div class="portrait4_img">
+  <img src="assets/img/tibias4.jpg" alt="Tobias Barsnes">
+  <p>Aarhus Art Museum</p>
+</div>
 
+<div class="portrait3_img">
+  <img src="assets/img/tibias3.jpg" alt="Tobias Barsnes">
+  <p>Aarhus</p>
+</div>
+
+<div class="portrait5_img">
+  <img src="assets/img/tibias5.jpg" alt="Tobias Barsnes">
+  <p>Aarhus</p>
+</div>
 
 </body>
