--- a/portraits.html
+++ b/portraits.html
@@ -5,6 +5,14 @@
 </head>
 
 <body style="background-color:#FAB135">
+  <style>
+body {
+    background-image: url(assets/img/minimal.png);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+}
+</style>
 
 <div class="Portraits">
   <h1>Portraits</h1>
