--- a/documentary.html
+++ b/documentary.html
@@ -4,6 +4,15 @@
 </head>
 
 <body style="background-color:#FAB135">
+  <body style="background-color:#FAB135">
+    <style>
+  body {
+      background-image: url(assets/img/minimal.png);
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-position: center;
+  }
+  </style>
 
 <div class="documentary">
   <h1>Documentary</h1>
