--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <h2>portfolio</h2>
       <hr>
       <a class="far fa-angle-down" href="#portfolio"></a>
+      <body style="background-color:#FAB135">
     </div>
 
     <div class="two" id="portfolio">
