--- a/portraits.html
+++ b/portraits.html
@@ -15,33 +15,25 @@ body {
 </style>
 
 <div class="Portraits">
-  <h1>Portraits</h1>
+  <h1>Portrett</h1>
+  <a href="index.html">Hjem</a>
 </div>
 
 <div class="portrait1_img">
-  <img src="assets/img/tibias.jpg" alt="Tobias Barsnes">
-  <p>Aarhus Art Museum</p>
+  <img src="assets/img/erik1.jpg" alt="Erik">
   </div>
 </div>
 
 <div class="portrait2_img">
-  <img src="assets/img/tibias2.jpg" alt="Tobias Barsnes">
-  <p>Aarhus Art Museum</p>
+  <img src="assets/img/erik2.jpg" alt="Erik">
 </div>
 
 <div class="portrait4_img">
-  <img src="assets/img/tibias4.jpg" alt="Tobias Barsnes">
-  <p>Aarhus Art Museum</p>
+  <img src="assets/img/erik3.jpg" alt="Erik">
 </div>
 
 <div class="portrait3_img">
-  <img src="assets/img/tibias3.jpg" alt="Tobias Barsnes">
-  <p>Aarhus</p>
-</div>
-
-<div class="portrait5_img">
-  <img src="assets/img/tibias5.jpg" alt="Tobias Barsnes">
-  <p>Aarhus</p>
+  <img src="assets/img/erik4.jpg" alt="Erik">
 </div>
 
 </body>
