--- a/documentary.html
+++ b/documentary.html
@@ -15,10 +15,11 @@
   </style>
 
 <div class="documentary">
-  <h1>Documentary</h1>
+  <h1>Dokumentar</h1>
+  <a href="index.html">Hjem</a>
 </div>
 
 <div class="video">
   <iframe width="1120" height="630" src="https://www.youtube.com/embed/cDt_QSjVwTc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-  <p>A documentary about Tseten who attends an international school in Norway after having to flee the country where he grew up.</p>
+  <p>En dokumentar om Tseten som fortsatte skolegangen sin i Norge etter han flyktet fra Tibet</p>
 </div>
