--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<div class="one">
       <h1>Sara Lysgård</h1>
-      <h2>portfolio</h2>
+      <h2>portefølje</h2>
       <hr>
       <a class="far fa-angle-down" href="#portfolio"></a>
       <body style="background-color:#FAB135">
@@ -23,35 +23,37 @@
 
     <div class="two" id="portfolio">
       <div class="overlay2">
-        <h2>Portraits</h2>
+        <h2>Portrett</h2>
         <hr>
-        <p>Aarhus, June 2018</p>
-        <a href="portraits.html" class="button" >see more</a>
+        <p>Bergen, november 2018</p>
+        <a href="portraits.html" class="button" >se mer</a>
       </div>
     </div>
 
     <div class="three">
       <div class="overlay3">
-        <h2>Documentary</h2>
+        <h2>Dokumentar</h2>
         <hr>
-        <p>Flekke, December 2017</p>
-        <a href="documentary.html" class="button">see more</a>
+        <p>Flekke, desember 2017</p>
+        <a href="documentary.html" class="button">se mer</a>
       </div>
     </div>
 
     <div class="four">
       <div class="overlay4">
-        <h2>3</h2>
+        <h2>Trumpatouille</h2>
         <hr>
-        <p>coming soon!<p>
+        <p>Bergen, november 2018<p>
+        <a href="trumpatouille.html" class="button">se mer</a>
       </div>
     </div>
 
     <div class="five">
       <div class="overlay5">
-        <h2>4</h2>
+        <h2>Politisk reklame</h2>
         <hr>
-        <p>coming soon!<p>
+        <p>Bergen, oktober 2018<p>
+        <a href="politiskreklame.html" class="button">se mer</a>
       </div>
     </div>
 
@@ -59,7 +61,7 @@
       <div class="overlay6">
         <h2>5</h2>
         <hr>
-        <p>coming soon!<p>
+        <p>kommer snart!<p>
       </div>
     </div>
 
@@ -67,15 +69,15 @@
       <div class="overlay7">
         <h2>6</h2>
         <hr>
-        <p>coming soon!<p>
+        <p>kommer snart!<p>
       </div>
     </div>
 
     <div class="eight">
       <div class="container1">
-        <h2>about me</h2>
+        <h2>om meg</h2>
         <hr>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Jeg er en 18 år gammel jente som er bosatt i Bergen. For øyeblikket tar jeg sisteåret medier og kommunikasjon ved Metis Videregående Skole, men på fritiden liker jeg å produsere ulike typer media. Tidligere har jeg jobbet i lokalavis, samtidig har jeg hatt erfaring med film, foto, streaming og koding.</p>
       </div>
       <div class="container2">
         <img src="assets/img/meg.jpg" alt="Sara Lysgård">
