--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="twelve"></div>
 
 
-    <div class="thirteen"><h4>Copyright © 2018 All Rights Reserved.</h4></div>
+    <div class="thirteen"><h4>Copyright © 2018 Alle rettigheter forbeholdes.</h4></div>
 
 	</div>
 
