--- a/trumpatouille.html
+++ b/trumpatouille.html
@@ -14,7 +14,7 @@ body {
 </style>
 
 <div class="trumpatouille">
-<h1>Documentary</h1>
+<h1>Trumpatouille</h1>
 <a href="index.html">Hjem</a>
 </div>
 
