--- a/documentary.html
+++ b/documentary.html
@@ -20,6 +20,6 @@
 </div>
 
 <div class="video">
-  <iframe width="1120" height="630" src="https://www.youtube.com/embed/cDt_QSjVwTc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-  <p>En dokumentar om Tseten som fortsatte skolegangen sin i Norge etter han flyktet fra Tibet</p>
+<iframe width="1120" height="630" src="https://www.youtube.com/embed/cDt_QSjVwTc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<p>En dokumentar om Tseten som fortsatte skolegangen sin i Norge etter han flyktet fra Tibet</p>
 </div>
