--- a/politiskreklame.html
+++ b/politiskreklame.html
@@ -20,5 +20,5 @@ body {
 
 <div class="video">
 <iframe width="1120" height="630" src="https://www.youtube.com/embed/S4ErJylMBo4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<p>Reklame for arbeiderpartiet.</p>
+<p>Reklame for arbeiderpartiet som del av et skoleprosjekt.</p>
 </div>
