--- a/trumpatouille.html
+++ b/trumpatouille.html
@@ -20,5 +20,5 @@ body {
 
 <div class="video">
 <iframe width="1120" height="630" src="https://www.youtube.com/embed/0PHIRV3fmyM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<p>Innsiden av hodet til Trump.</p>
+<p>En fremstilling av hva som skjer i hodet til Trump. Snutten ble produsert i sammenheng med en skoleoppgave</p>
 </div>
